Update the website

--- a/04-simple-regression.Rmd
+++ b/04-simple-regression.Rmd
@@ -8,6 +8,22 @@ One such parametric association might be the following:
 
 $$\text{outcome} = 3 + 2 \times \text{exposure}$$
 
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data <- data.frame(x=-10:10)
+data$y <- 3 + 2*data$x
+
+q <- ggplot(data,aes(x=x,y=y))
+q <- q + geom_vline(xintercept=0,colour="red")
+q <- q + geom_hline(yintercept=0,colour="red")
+q <- q + geom_line()
+q <- q + scale_x_continuous("Exposure")
+q <- q + scale_y_continuous("Outcome")
+q
+```
+
 Depending on the type of outcome, different types of regression will need to be used.
 
 For all regressions, the exposure can be:
@@ -34,11 +50,47 @@ For example, if we run an ice cream shop:
 
 $$\text{number of ice creams sold} = 5 + 3 \times \text{temperature} + \text{error}$$
 
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data <- data.frame(x=-10:40)
+data$line <- 5 + 3*data$x
+data$y <- data$line + rnorm(nrow(data),sd=10)
+
+q <- ggplot(data,aes(x=x))
+q <- q + geom_vline(xintercept=0,colour="red")
+q <- q + geom_hline(yintercept=0,colour="red")
+q <- q + geom_point(mapping=aes(y=y))
+q <- q + geom_line(mapping=aes(y=line))
+q <- q + scale_x_continuous("Temperature")
+q <- q + scale_y_continuous("Number of ice creams sold")
+q
+```
+
 If today's temperature is 30C, we can expect our shop to sell $5 + 3 \times 30 = 95$ ice creams. Because $\beta_1$ ($=3$) was not zero, we have a significant association between temperature and number of ice creams sold.
 
 Another example, if we work as a midwife:
 
 $$\text{Child's birthweight} = 3 + 0 \times \text{temperature at day of delivery} + \text{error}$$
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data <- data.frame(x=-10:40)
+data$line <- 3 + 0*data$x
+data$y <- data$line + rnorm(nrow(data),sd=0.5)
+
+q <- ggplot(data,aes(x=x))
+q <- q + geom_vline(xintercept=0,colour="red")
+q <- q + geom_hline(yintercept=0,colour="red")
+q <- q + geom_point(mapping=aes(y=y))
+q <- q + geom_line(mapping=aes(y=line))
+q <- q + scale_x_continuous("Temperature")
+q <- q + scale_y_continuous("Child's birthweight")
+q
+```
 
 If today's temperature is 30C, we can expect that children born today will be (on average) $3 + 0 \times 30 = 3$ kg. If tomorrow's temperature is 10C, we can expect that children born today will be (on average) $3 + 0 \times 10 = 3$ kg. Because $\beta_1$ was zero, we do not have a significant association between temperature and birthweight.
 
@@ -63,6 +115,24 @@ $$\text{birth weight} = \beta_0 + \beta_1 \times \text{parent's income} + \text{
 $$\text{H}_0: \beta_1 = 0$$
 $$\text{H}_1: \beta_1 \ne 0$$
 
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data <- data.frame(x=10:100)
+data$line <- 3 + 0.01*data$x
+data$y <- data$line + rnorm(nrow(data),sd=0.5)
+
+q <- ggplot(data,aes(x=x))
+q <- q + geom_vline(xintercept=0,colour="red")
+q <- q + geom_hline(yintercept=0,colour="red")
+q <- q + geom_point(mapping=aes(y=y))
+q <- q + geom_line(mapping=aes(y=line))
+q <- q + scale_x_continuous("Parent's income ($1000s)")
+q <- q + scale_y_continuous("Child's birthweight")
+q
+```
+
 ### Example 2
 
 $\rightarrow$ Testing if average birth weight (continuous outcome) is associated with child's sex (binary exposure)
@@ -72,6 +142,24 @@ $$\text{birth weight} = \beta_0 + \beta_1 \times \text{is boy} + \text{error}$$
 $$\text{H}_0: \beta_1 = 0$$
 $$\text{H}_1: \beta_1 \ne 0$$
 
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data <- data.frame(x=c(rep(0,100),rep(1,100)))
+data$line <- 3 + 1*data$x
+data$y <- data$line + rnorm(nrow(data),sd=0.5)
+
+q <- ggplot(data,aes(x=x))
+q <- q + geom_vline(xintercept=0,colour="red")
+q <- q + geom_hline(yintercept=0,colour="red")
+q <- q + geom_point(mapping=aes(y=y))
+q <- q + geom_line(mapping=aes(y=line))
+q <- q + scale_x_continuous("Child's sex (is male)")
+q <- q + scale_y_continuous("Child's birthweight")
+q
+```
+
 ### Example 3
 
 $\rightarrow$ Testing if average BMI levels (continuous outcome) differ across Scandinavia (categorical exposure)
@@ -80,6 +168,26 @@ $$\text{bmi} = \beta_0 + \beta_1 \times \text{is Norway} + \beta_2 \times \text{
 
 $$\text{H}_0: \beta_1 = \beta_2 = 0$$
 $$\text{H}_1: \beta_1 \ne 0 \text{ and/or } \beta_2 \ne 0$$
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data <- data.frame(x=c(rep(0,100),rep(1,100),rep(2,100)))
+data$line <- 18
+data$line[data$x==1] <- 23
+data$line[data$x==2] <- 55
+data$y <- data$line + rnorm(nrow(data),sd=4)
+
+q <- ggplot(data,aes(x=x))
+q <- q + geom_vline(xintercept=0,colour="red")
+q <- q + geom_hline(yintercept=0,colour="red")
+q <- q + geom_point(mapping=aes(y=y))
+q <- q + geom_line(mapping=aes(y=line))
+q <- q + scale_x_continuous("Country",breaks=c(0,1,2),labels=c("Denmark","Norway","Sweden"))
+q <- q + scale_y_continuous("BMI")
+q
+```
 
 ### Example 4
 
@@ -122,12 +230,42 @@ $\rightarrow$ Testing if average birth weight (continuous outcome) is different 
 $$\text{H}_0: \mu_{\text{boys}} = \mu_{\text{girls}}$$
 $$\text{H}_1: \mu_{\text{boys}} \ne \mu_{\text{girls}}$$
 
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data1 <- data.frame(x=rnorm(1000,mean=2,sd=1), group="Female", stringsAsFactors = F)
+data2 <- data.frame(x=rnorm(1000,mean=3,sd=1), group="Male", stringsAsFactors = F)
+data <- rbind(data1,data2)
+q <- ggplot(data,aes(x=x,fill=group))
+q <- q + geom_histogram(alpha=0.5,colour="black",pos="dodge")
+q <- q + scale_x_continuous("Weight (Kg)")
+q <- q + scale_y_continuous("Number of babies")
+q <- q + scale_fill_brewer("",palette="Set1")
+q
+```
+
 **ANOVA**:
 
 $\rightarrow$ Testing if average birth weight (continuous outcome) is different in female children versus male children
 
 $$\text{H}_0: \mu_{\text{boys}} = \mu_{\text{girls}}$$
 $$\text{H}_1: \mu_{\text{boys}} \ne \mu_{\text{girls}}$$
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data1 <- data.frame(x=rnorm(1000,mean=2,sd=1), group="Female", stringsAsFactors = F)
+data2 <- data.frame(x=rnorm(1000,mean=3,sd=1), group="Male", stringsAsFactors = F)
+data <- rbind(data1,data2)
+q <- ggplot(data,aes(x=x,fill=group))
+q <- q + geom_histogram(alpha=0.5,colour="black",pos="dodge")
+q <- q + scale_x_continuous("Weight (Kg)")
+q <- q + scale_y_continuous("Number of babies")
+q <- q + scale_fill_brewer("",palette="Set1")
+q
+```
 
 **Linear regression**:
 
@@ -136,6 +274,25 @@ $\rightarrow$ Testing if the effect of child's sex on average birth weight (cont
 $$\text{birth weight} = \beta_0 + \beta_1 \times \text{is boy} + \text{error}$$
 $$\text{H}_0: \beta_1 = 0$$
 $$\text{H}_1: \beta_1 \ne 0$$
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data <- data.frame(x=c(rep(0,100),rep(1,100)))
+data$line <- 2
+data$line[data$x==1] <- 3
+data$y <- data$line + rnorm(nrow(data),sd=1)
+
+q <- ggplot(data,aes(x=x))
+q <- q + geom_vline(xintercept=0,colour="red")
+q <- q + geom_hline(yintercept=0,colour="red")
+q <- q + geom_point(mapping=aes(y=y))
+q <- q + geom_line(mapping=aes(y=line))
+q <- q + scale_x_continuous("Sex",breaks=c(0,1),labels=c("Female","Male"))
+q <- q + scale_y_continuous("Kg")
+q
+```
 
 **Conclusion**:
 
@@ -152,12 +309,42 @@ $\rightarrow$ Testing if average number of hours sleep (continuous outcome) is d
 $$\text{H}_0: \mu_{\text{parents}} = \mu_{\text{childless}}$$
 $$\text{H}_1: \mu_{\text{parents}} \ne \mu_{\text{childless}}$$
 
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data1 <- data.frame(x=rnorm(1000,mean=8,sd=0.5), group="Childless", stringsAsFactors = F)
+data2 <- data.frame(x=rnorm(1000,mean=5,sd=0.5), group="Parents", stringsAsFactors = F)
+data <- rbind(data1,data2)
+q <- ggplot(data,aes(x=x,fill=group))
+q <- q + geom_histogram(alpha=0.5,colour="black",pos="dodge")
+q <- q + scale_x_continuous("Hours sleep")
+q <- q + scale_y_continuous("Number of people")
+q <- q + scale_fill_brewer("",palette="Set1")
+q
+```
+
 **ANOVA**:
 
 $\rightarrow$ Testing if average number of hours sleep (continuous outcome) is different in adults who are parents versus those who are childless
 
 $$\text{H}_0: \mu_{\text{parents}} = \mu_{\text{childless}}$$
 $$\text{H}_1: \mu_{\text{parents}} \ne \mu_{\text{childless}}$$
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data1 <- data.frame(x=rnorm(1000,mean=8,sd=0.5), group="Childless", stringsAsFactors = F)
+data2 <- data.frame(x=rnorm(1000,mean=5,sd=0.5), group="Parents", stringsAsFactors = F)
+data <- rbind(data1,data2)
+q <- ggplot(data,aes(x=x,fill=group))
+q <- q + geom_histogram(alpha=0.5,colour="black",pos="dodge")
+q <- q + scale_x_continuous("Hours sleep")
+q <- q + scale_y_continuous("Number of people")
+q <- q + scale_fill_brewer("",palette="Set1")
+q
+```
 
 **Linear regression**:
 
@@ -166,6 +353,25 @@ $\rightarrow$ Testing if the effect of being a parent on average number of hours
 $$\text{birth weight} = \beta_0 + \beta_1 \times \text{is parent} + \text{error}$$
 $$\text{H}_0: \beta_1 = 0$$
 $$\text{H}_1: \beta_1 \ne 0$$
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data <- data.frame(x=c(rep(0,100),rep(1,100)))
+data$line <- 8
+data$line[data$x==1] <- 5
+data$y <- data$line + rnorm(nrow(data),sd=0.5)
+
+q <- ggplot(data,aes(x=x))
+q <- q + geom_vline(xintercept=0,colour="red")
+q <- q + geom_hline(yintercept=0,colour="red")
+q <- q + geom_point(mapping=aes(y=y))
+q <- q + geom_line(mapping=aes(y=line))
+q <- q + scale_x_continuous("Parental status",breaks=c(0,1),labels=c("Childless","Parents"))
+q <- q + scale_y_continuous("Hours of sleep")
+q
+```
 
 **Conclusion**:
 
@@ -234,6 +440,22 @@ $\rightarrow$ Testing if average birth weight (continuous outcome) differs betwe
 $$\text{H}_0: \mu_{\text{Norway}} = \mu_{\text{Denmark}} = \mu_{\text{Sweden}}$$
 $$\text{H}_1: \mu_{\text{Norway}} \ne \mu_{\text{Denmark}} \text{ and/or } \mu_{\text{Norway}} \ne \mu_{\text{Sweden}}  \text{ and/or } \mu_{\text{Denmark}} \ne \mu_{\text{Sweden}}$$
 
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data1 <- data.frame(x=rnorm(1000,mean=2,sd=0.5), group="Denmark", stringsAsFactors = F)
+data2 <- data.frame(x=rnorm(1000,mean=3,sd=0.5), group="Norway", stringsAsFactors = F)
+data3 <- data.frame(x=rnorm(1000,mean=4,sd=0.5), group="Sweden", stringsAsFactors = F)
+data <- rbind(data1,data2,data3)
+q <- ggplot(data,aes(x=x,fill=group))
+q <- q + geom_histogram(alpha=0.5,colour="black",pos="dodge")
+q <- q + scale_x_continuous("Weight (Kg)")
+q <- q + scale_y_continuous("Number of babies")
+q <- q + scale_fill_brewer("",palette="Set1")
+q
+```
+
 **Linear regression**:
 
 $\rightarrow$ Testing if the effect of country on average birth weight (continuous outcome) is different than zero
@@ -241,6 +463,26 @@ $\rightarrow$ Testing if the effect of country on average birth weight (continuo
 $$\text{birth weight} = \beta_0 + \beta_1 \times \text{is Norway} + \beta_2 \times \text{is Denmark} + \text{error}$$
 $$\text{H}_0: \beta_1 = \beta_2 = 0$$
 $$\text{H}_1: \beta_1 \ne 0 \text{ and/or } \beta_2 \ne 0$$
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(data.table)
+library(ggplot2)
+
+data <- data.frame(x=c(rep(0,100),rep(1,100),rep(2,100)))
+data$line <- 2
+data$line[data$x==1] <- 3
+data$line[data$x==2] <- 4
+data$y <- data$line + rnorm(nrow(data),sd=0.5)
+
+q <- ggplot(data,aes(x=x))
+q <- q + geom_vline(xintercept=0,colour="red")
+q <- q + geom_hline(yintercept=0,colour="red")
+q <- q + geom_point(mapping=aes(y=y))
+q <- q + geom_line(mapping=aes(y=line))
+q <- q + scale_x_continuous("Country",breaks=c(0,1,2),labels=c("Denmark","Norway","Sweden"))
+q <- q + scale_y_continuous("BMI")
+q
+```
 
 **Conclusion**:
 
